# cactus

./: .gitignore  README.md
.github/workflows/: gradle-build.yml
android/: README.md  build.gradle.kts  settings.gradle.kts
android/src/main/java/com/cactus/android/: LlamaContext.kt
cactus-react/src/: index.ts  tools.ts
cactus_flutter/: README.md  pubspec.yaml
cactus_flutter/android/: build.gradle
cactus_flutter/example/: pubspec.yaml
cactus_flutter/example/integration_test/: plugin_integration_test.dart
cactus_flutter/example/ios/RunnerTests/: RunnerTests.swift
cactus_flutter/example/test/: widget_test.dart
cactus_flutter/ios/: cactus_flutter.podspec
cactus_flutter/ios/Classes/: CactusFlutterPlugin.swift
cactus_flutter/test/: cactus_flutter_method_channel_test.dart  cactus_flutter_test.dart
examples/react-chat/: README.md  package.json  tsconfig.json
examples/react-chat/app/: index.tsx
examples/react-chat/utils/: modelUtils.ts  newModelUtils.ts
examples/react-productivity/app/: index.tsx
flutter/: README.md  ffigen.yaml  pubspec.yaml
flutter/android/: build.gradle
flutter/example/: README.md  pubspec.yaml
flutter/example/ios/Runner/: Info.plist
flutter/example/ios/Runner.xcodeproj/: project.pbxproj
flutter/ios/: cactus.podspec
flutter/ios/Classes/: cactus.c
flutter/src/: CMakeLists.txt  cactus.c
react/: cactus-react-native-2.podspec  package.json
react/src/: index.ts  modelDownloader.ts
scripts/: build-flutter.sh  build-react.sh  build-release.sh  build.sh
(+4 files in other folders)
